--- a/templates/Home.html
+++ b/templates/Home.html
@@ -21,8 +21,8 @@
          <h1 style="color: black; text-align: center; font-size: 40px; font-weight: bold;">Employee Database</h1>
          
 	 <div>
-		 <h2 style="margin-left: 16%;"> Date and Time is <span id="time"></span></h2>
-		 {{ date.strftime("%A, %d %B, %Y at %X") }}
+		 <h2 style="margin-left: 16%;"> Date and Time is <span id="time"></span>{{ date.strftime("%A, %d %B, %Y at %X") }}</h2>
+<!-- 		 {{ date.strftime("%A, %d %B, %Y at %X") }} -->
 		 #<script src = time.js></script>
 	 </div>
          
