--- a/templates/Home.html
+++ b/templates/Home.html
@@ -23,7 +23,7 @@
 	 <div>
 		 <h2 style="margin-left: 16%;"> Date and Time is <span id="time"></span>{{ date.strftime("%A, %d %B, %Y at %X") }}</h2>
 <!-- 		 {{ date.strftime("%A, %d %B, %Y at %X") }} -->
-		 #<script src = time.js></script>
+		 <script src = time.js></script>
 	 </div>
          
 	 
