--- a/templates/Home.html
+++ b/templates/Home.html
@@ -28,10 +28,18 @@
          
           <form action="/" autocomplete="on" method = "POST" enctype="multipart/form-data">
 
-	    <a href="/attendance/"><button class="button1">Attendance</button></a>
-            <a href="/addemp/"><button class="button1">Hire Employee</button></a>
-            <a href="/delemp/"><button class="button1">Fire Employee</button></a>
-            <a href="/getemp/"><button class="button1">Employee Detail</button></a>
+	  <a href="/attendance/">
+		<button class="button1">Attendance</button>
+	  </a>
+          <a href="/addemp/">
+		  <button class="button1">Hire Employee</button>
+	  </a>
+          <a href="/delemp/">
+		  <button class="button1">Fire Employee</button>
+	  </a>
+          <a href="/getemp/">
+		  <button class="button1">Employee Detail</button>
+	  </a>
 
 			</form>            
       </div>
