--- a/templates/emp_det_out.html
+++ b/templates/emp_det_out.html
@@ -11,9 +11,9 @@
         <div class="topnav">
          <a href="/">Home</a>
          <a href="/attendance/">Attendance</a>
-         <a class="active" href="/addemp/">Hire Employee</a>
+         <a href="/addemp/">Hire Employee</a>
          <a href="/delemp/">Fire Employees</a>
-         <a href="/getemp/">Employee Details</a>
+         <a class="active" href="/getemp/">Employee Details</a>
 
             
     </header>
