--- a/templates/emp_det_out.html
+++ b/templates/emp_det_out.html
@@ -43,7 +43,7 @@
                      <br><br>
    
                      <a href="/">
-                        <button type="submit" class="buttonBack" style="margin-top: 3%;"formaction="http://3.134.115.108:80/getemp">BACK</button><br><br>
+                        <button type="submit" class="buttonBack" style="margin-left: 1%;">BACK</button><br><br>
                      </a>
                     
    
