--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -21,7 +21,7 @@
        <div id = "container">
          <h1 style="color: black; text-align: center; font-size: 40px;">Attendance</h1>
             <label for="username">Employee ID:</label>
-            <input type="text" id="username" name="username">
+            <input type="text" id="username" name="emp_id">
             <br>
             <button type="submit" class="buttonBack" formaction="/attendance/checkIn" style="margin-top: 10%; margin-left: 10%;">Check In</button>
             <a href="/attendance/output"><button type="submit" class="buttonBack" style="margin-top: 10%; margin-left: 10%;">Check Out</button></a>
