--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -23,7 +23,7 @@
             <label for="username">Employee ID:</label>
             <input type="text" id="username" name="emp_id">
             <br>
-            <button type="submit" class="buttonBack" formaction="/attendance/checkIn" style="margin-top: 10%; margin-left: 10%;">Check In</button>
+            <a href="/attendance/checkIn"><button type="submit" class="buttonBack" formaction="/attendance/checkIn" style="margin-top: 10%; margin-left: 10%;">Check In</button></a?
             <a href="/attendance/output"><button type="submit" class="buttonBack" style="margin-top: 10%; margin-left: 10%;">Check Out</button></a>
             <!--/ lower-->
          </form>
@@ -37,16 +37,6 @@
     top: 0;
     width: 100%;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
