--- a/templates/hire_emp_out.html
+++ b/templates/hire_emp_out.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
    <head style="opacity: 0.1;">
-        <link href="web.css" rel="stylesheet" />
+        <link href="{{ url_for('static', filename='web.css')}}" rel="stylesheet" />
         <title>CC Assignment</title>
    </head>
 
@@ -33,16 +33,6 @@
       </div>
    </body>
 </html>
-
-<!-- a login in page with navigation panel at center?
- .navbar { 
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-
-
 
 
 
