--- a/templates/fire_emp.html
+++ b/templates/fire_emp.html
@@ -21,7 +21,7 @@
        <div id = "container">
          <h1 style="color: black; text-align: center; font-size: 40px;">Fire Employee</h1>
 
-         <form action="/fetchdata" autocomplete="on" method="POST">
+         <form action="/delemp/results" autocomplete="on" method="POST" enctype="multipart/form-data">
 
 				<label for="username">Employee ID:</label>
             
