--- a/templates/emp_det_out.html
+++ b/templates/emp_det_out.html
@@ -43,9 +43,11 @@
                      <br><br>
                </div>
    
-               <a href="/">
-                  <button type="submit" class="buttonBack" style="margin-left: 1%;">BACK</button><br><br>
-               </a>
+               <form action="/" autocomplete="on" method = "GET">
+                  <a href="/">
+                     <button type="submit" class="buttonBack" style="margin-left: 1%;">BACK</button><br><br>
+                  </a>
+				   </form>
                     
    
                  
