--- a/templates/emp_det_out.html
+++ b/templates/emp_det_out.html
@@ -26,20 +26,20 @@
    
                      <label style="font-size: 15pt; margin-right: 10%; font-weight: bold;">Employee ID:</label>
                      <label style="font-size: 15pt; margin-left: 10%; font-weight: bold;">First Name:</label><br>
-                     <label style="font-size: 15pt; margin-right: 10%;margin-left: 10%; font-weight: bold; margin-top: 1%;">{{ result[0] }}</label> 
-                     <label style="font-size: 15pt; margin-left: 15%;margin-right: 5%; font-weight: bold; margin-top: 1%;">{{ result[1] }}</label> 
+                     <label style="font-size: 15pt; margin-right: 10%;margin-left: 10%; font-weight: bold; margin-top: 1%;">{{ emp_id_output }}</label> 
+                     <label style="font-size: 15pt; margin-left: 15%;margin-right: 5%; font-weight: bold; margin-top: 1%;">{{ fname }}</label> 
                      <br><br>
    
                      <label style="font-size: 15pt; margin-right: 10%; font-weight: bold;">Last Name:</label>
                      <label style="font-size: 15pt; margin-left: 10%; font-weight: bold;">Primary Interest:</label><br>
-                     <label style="font-size: 15pt; margin-right: 10%;margin-left: 10%; font-weight: bold; margin-top: 1%;">{{ result[2] }}</label> 
-                     <label style="font-size: 15pt; margin-left: 15%;margin-right: 5%; font-weight: bold; margin-top: 1%;">{{ result[3] }}</label> 
+                     <label style="font-size: 15pt; margin-right: 10%;margin-left: 10%; font-weight: bold; margin-top: 1%;">{{ lname }}</label> 
+                     <label style="font-size: 15pt; margin-left: 15%;margin-right: 5%; font-weight: bold; margin-top: 1%;">{{ emp_loc_output }}</label> 
                      <br><br>
 
                      <label style="font-size: 15pt; margin-right: 10%; font-weight: bold;">Location:</label>
                      <label style="font-size: 15pt; margin-left: 10%; font-weight: bold;">Image Url:</label><br>
-                     <label style="font-size: 15pt; margin-right: 10%;margin-left: 10%; font-weight: bold; margin-top: 1%;">{{ result[4] }}</label> 
-                     <label style="font-size: 15pt; margin-left: 15%;margin-right: 5%; font-weight: bold; margin-top: 1%;">{{ result[5] }}</label> 
+                     <label style="font-size: 15pt; margin-right: 10%;margin-left: 10%; font-weight: bold; margin-top: 1%;">{{ emp_pri_skill_output }}</label> 
+                     <label style="font-size: 15pt; margin-left: 15%;margin-right: 5%; font-weight: bold; margin-top: 1%;">{{ emp_img }}</label> 
                      <br><br>
                </div>
    
