--- a/templates/fire_emp.html
+++ b/templates/fire_emp.html
@@ -11,8 +11,8 @@
         <div class="topnav">
          <a href="/">Home</a>
          <a href="/attendance/">Attendance</a>
-         <a class="active" href="/addemp/">Hire Employee</a>
-         <a href="/delemp/">Fire Employees</a>
+         <a href="/addemp/">Hire Employee</a>
+         <a class="active" href="/delemp/">Fire Employees</a>
          <a href="/getemp/">Employee Details</a>
 
             
