--- a/templates/fire_emp.html
+++ b/templates/fire_emp.html
@@ -21,17 +21,15 @@
        <div id = "container">
          <h1 style="color: black; text-align: center; font-size: 40px;">Fire Employee</h1>
 
-         <form action="/delemp/results" autocomplete="on" method="POST" enctype="multipart/form-data">
+        <form action="/delemp/results" autocomplete="on" method="POST" enctype="multipart/form-data">
 
-				<label for="username">Employee ID:</label>
+	<label for="username">Employee ID:</label>
             
-            <input type="text" name="emp_id" autofocus size="40"><br><br>
+        <input type="text" name="emp_id" autofocus size="40"><br><br>
 
-		  		<button type="submit" class = "buttonBack"  style="margin-top: 15%; margin-left: 35%;">SEARCH</button><br><br>
+	<button type="submit" class = "buttonBack"  style="margin-top: 15%; margin-left: 35%;">DELETE</button><br><br>
 
-			</form>
-         <!--/ lower-->
-      </form>
+      	</form>
             
             </div>
             <!--/ lower-->
